--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ a{
     color: inherit;
 }
 
+i{
+    cursor: pointer;
+}
+
 h1,h2,h3,h4,h5,h6{
     color: white;
 }
@@ -42,6 +46,23 @@ h1,h2,h3,h4,h5,h6{
     flex-shrink: 0;
 }
 
+.button{
+    color: white;
+    border: 1px solid white;
+    border-radius: 50px;
+    padding: 0.8rem 2.5rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    flex-shrink: 0;
+    text-align: center;
+}
+
+.button:hover{
+    transform: scale(105%);
+}
+
+/* App */
+
 .app-container{
     height: 100vh;
     background-color: black;
@@ -53,7 +74,97 @@ h1,h2,h3,h4,h5,h6{
 
         .sidebar{
             width: 230px;
+            padding: 0 1rem;
+            gap: 1rem;
+            font-weight: bold;
+            overflow: hidden;
         }
+
+            .logo{
+                max-width: 130px;
+                padding-top: 1rem;
+            }
+
+                .logo-small{
+                    display: none;
+                }
+
+            .nav{
+                padding: 1rem 0;
+                position: relative;
+            }
+
+                .focus{
+                    position: absolute;
+                    width: 3px;
+                    height: 2rem;
+                    background-color: #adff2f;
+                    top: 1rem;
+                    left: -1rem;
+                    z-index: 2;
+                }
+
+                .nav li{
+                    padding: 0.5rem 0.5rem;
+                    align-items: center;
+                    cursor: pointer;
+                }
+
+                .nav .home .hide-menu{
+                    color: white;
+                }
+
+            .playlist{
+                padding: 1rem 0;
+                overflow: hidden;
+            }
+
+                .add-button{
+                    color: black;
+                    background-color: #a3a3a3;
+                    font-size: 2rem;
+                    padding: 0.1rem 0.6rem;
+                    margin: 0.5rem 0.5rem 0.5rem 0;
+                    vertical-align: middle;
+                }
+
+                .playlist-list{
+                    list-style: none;
+                    overflow: auto;
+                }
+
+                    .playlist-list li{
+                        padding: 0.5rem;
+                    }
+
+            .user .flex{
+                padding: 0.5rem 0.5rem;
+                align-items: center;
+                cursor: pointer;
+            }
+
+                .user svg{
+                    width: 1rem;
+                    margin-right: 0.5rem;
+                }
+
+                .user-name{
+                    color: white;
+                }
+
+                .user .user-name svg{
+                    width: 2rem;
+                    background-color: #a3a3a3;
+                    border-radius: 28px;
+                    padding: 0 0.1rem;
+                }
+
+                .user hr{
+                    border-bottom: 1px solid #a3a3a3;
+                    border-top: 0;
+                    height: 0;
+                    padding-left: 0;
+                }
 
         .main-content{
             overflow: hidden;
@@ -62,6 +173,8 @@ h1,h2,h3,h4,h5,h6{
             .upgrade-bar{
                 position: sticky;
                 background-color: rgba(0,0,0,0.7);
+                text-align: right;
+                padding: 1rem 2rem;
             }
 
             .main-scroll-section{
@@ -69,28 +182,93 @@ h1,h2,h3,h4,h5,h6{
                 background-color: #141922;
             }
 
+    /* Player Section */
+
     .player{
         background-color: #282828;
         justify-content: space-between;
-        padding: 1rem 0;
+        padding: 1rem;
     }
 
         .now-playing{
-
+            padding: 0.5rem;
+            align-items: center;
+            gap: 1rem;
         }
 
             .song-img{
-
             }
 
                 .song-img img{
-                    height: 100%;
+                    max-height: 50px;
                 }
 
-        .player-controls{
+            .song-name{
+                font-size: 0.8rem;
+            }
 
+            .song-icons{
+                gap: 0.5rem;
+            }
+
+        .player-controls{
+            color: white;
+            gap: 0.5rem;
+            align-items: center;
         }
+
+            .player-controls-icons{
+                gap: 2rem;
+                font-size: 1.5rem;
+                align-items: center;
+            }
+
+                .fa-play{
+                    border-radius: 50%;
+                    border: 2px solid white;
+                    padding: 0.2rem 0.3rem 0.2rem 0.5rem;
+                }
+
+            .player-timing{
+                align-items: center;
+                gap: 1rem;
+            }
+
+                .player-bar{
+                    width: 430px;
+                    height: 4px;
+                    border-radius: 4px;
+                    background-color: #5a5a5a;
+                }
+
+                    .song-percentage{
+                        width: 20%;
+                        height: 100%;
+                        border-radius: 4px;
+                        background-color: #c1c1c1;
+                    }
 
         .player-options{
-
+            color: white;
+            gap: 1rem;
+            align-items: center;
+            padding: 1rem;
         }
+
+            .player-options-controls{
+                gap: 1rem;
+            }
+
+            .volume-bar{
+                width: 120px;
+                height: 4px;
+                border-radius: 4px;
+                background-color: #5a5a5a;
+            }
+
+                .volume-percentage{
+                    width: 20%;
+                    height: 4px;
+                    border-radius: 4px;
+                    background-color: #c1c1c1;
+                }
