--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ h1,h2,h3,h4,h5,h6{
 
                     .playlist-list li{
                         padding: 0.5rem;
+                        cursor: pointer;
                     }
 
             .user .flex{
