--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,7 @@ h1,h2,h3,h4,h5,h6{
         background-color: #282828;
         justify-content: space-between;
         padding: 1rem;
+        height: 90px;
     }
 
         .now-playing{
@@ -198,10 +199,11 @@ h1,h2,h3,h4,h5,h6{
         }
 
             .song-img{
+                height: 100%;
             }
 
                 .song-img img{
-                    max-height: 50px;
+                    height: 100%;
                 }
 
             .song-name{
@@ -216,11 +218,12 @@ h1,h2,h3,h4,h5,h6{
             color: white;
             gap: 0.5rem;
             align-items: center;
+            flex-basis: 100%;
+            max-width: 480px;
         }
 
             .player-controls-icons{
                 gap: 2rem;
-                font-size: 1.5rem;
                 align-items: center;
             }
 
@@ -231,12 +234,13 @@ h1,h2,h3,h4,h5,h6{
                 }
 
             .player-timing{
+                width: 100%;
                 align-items: center;
                 gap: 1rem;
+                padding: 0 1rem;
             }
 
                 .player-bar{
-                    width: 430px;
                     height: 4px;
                     border-radius: 4px;
                     background-color: #5a5a5a;
@@ -254,6 +258,8 @@ h1,h2,h3,h4,h5,h6{
             gap: 1rem;
             align-items: center;
             padding: 1rem;
+            flex-basis: 100%;
+            max-width: 170px;
         }
 
             .player-options-controls{
@@ -261,7 +267,8 @@ h1,h2,h3,h4,h5,h6{
             }
 
             .volume-bar{
-                width: 120px;
+                width: 100%;
+                min-width: 60px;
                 height: 4px;
                 border-radius: 4px;
                 background-color: #5a5a5a;
@@ -273,3 +280,58 @@ h1,h2,h3,h4,h5,h6{
                     border-radius: 4px;
                     background-color: #c1c1c1;
                 }
+
+/* Media Queries */
+
+@media screen and (max-width: 1100px) {
+    
+}
+
+@media screen and (max-width: 700px) {
+    
+}
+
+@media screen and (max-width: 600px) {
+
+    .song-img{
+        height: 80%;
+    }
+
+    .song-icons{
+        flex-direction: column;
+    }
+
+    .now-playing{
+        flex-shrink: 1;
+    }
+
+    .song-name{
+        font-size: 0.7rem;
+    }
+
+    .sidebar{
+        width: unset;
+    }
+
+    .logo-small{
+        display: block;
+        width: 2rem;
+        margin: auto;
+    }
+
+    .hide-menu{
+        display: none;
+    }
+
+    .nav{
+        padding: 0;
+    }
+
+    .nav li{
+        padding: 1.2rem 0;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    
+}
