--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 html{
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
+    font-weight: bold;
     color: #a3a3a3;
 }
 
@@ -52,7 +53,6 @@ h1,h2,h3,h4,h5,h6{
     border-radius: 50px;
     padding: 0.8rem 2.5rem;
     text-transform: uppercase;
-    font-weight: bold;
     flex-shrink: 0;
     text-align: center;
 }
@@ -76,7 +76,6 @@ h1,h2,h3,h4,h5,h6{
             width: 230px;
             padding: 0 1rem;
             gap: 1rem;
-            font-weight: bold;
             overflow: hidden;
         }
 
@@ -94,21 +93,30 @@ h1,h2,h3,h4,h5,h6{
                 position: relative;
             }
 
-                .focus{
+                .nav .focus{
                     position: absolute;
                     width: 3px;
-                    height: 2rem;
+                    height: 2.5rem;
                     background-color: #adff2f;
-                    top: 1rem;
+                    top: 1.2rem;
                     left: -1rem;
                     z-index: 2;
+                }
+
+                .nav ul{
+                    margin: 0;
                 }
 
                 .nav li{
                     padding: 0.5rem 0.5rem;
                     align-items: center;
                     cursor: pointer;
+                    gap: 0.5rem;
                 }
+
+                    .nav li .fa-li{
+                        position: static;
+                    }
 
                 .nav .home .hide-menu{
                     color: white;
@@ -178,10 +186,85 @@ h1,h2,h3,h4,h5,h6{
                 padding: 1rem 2rem;
             }
 
-            .main-scroll-section{
+            .main-section{
                 overflow: auto;
                 background-color: #141922;
             }
+
+                .menu{
+                    gap: 2rem;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                }
+
+                    .menu a{
+                        position: relative;
+                    }
+
+                        .menu a .focus{
+                            background-color: #adff2f;
+                            height: 2px;
+                            width: 70px;
+                            position: absolute;
+                            bottom: -4px;
+                            left: 50%;
+                            transform: translateX(-50%);
+                        }
+
+                .main-scroll-section .component{
+                    padding: 2rem;
+                }
+
+                    .component p{
+                        padding-bottom: 1rem;
+                    }
+
+                    .component h3{
+                        padding-top: 1rem;
+                    }
+
+                    .component .cards-container{
+                        gap: 1rem;
+                        width: 100%;
+                    }
+
+                        .cards-container .card{
+                            align-items: center;
+                            width: calc(100% / 6);
+                            cursor: pointer;
+                            text-align: center;
+                        }
+
+                            .card.rounded .img-container{
+                                border-radius: 50%;
+                                overflow: hidden;
+                            }
+
+                            .card .img-container{
+                                position: relative;
+                            }
+
+                                .card img{
+                                    width: 100%;
+                                }
+
+                                .card .overlay{
+                                    position: absolute;
+                                    width: 100%;
+                                    height: 100%;
+                                    background-color: rgba(0, 0, 0, 0.5);
+                                    color: white;
+                                    font-size: 2rem;
+                                    justify-content: center;
+                                    align-items: center;
+                                    top: 0;
+                                    left: 0;
+                                    display: none;
+                                }
+
+                        .card:hover .overlay{
+                            display: flex;
+                        }
 
     /* Player Section */
 
@@ -284,11 +367,20 @@ h1,h2,h3,h4,h5,h6{
 /* Media Queries */
 
 @media screen and (max-width: 1100px) {
+    .cards-container{
+        flex-wrap: wrap;
+    }
+    
+    .cards-container .card{
+        width: calc((100% / 4) - 1rem);
+    }
     
 }
 
 @media screen and (max-width: 700px) {
-    
+    .cards-container .card{
+        width: calc((100% / 2) - 1rem);
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -327,8 +419,8 @@ h1,h2,h3,h4,h5,h6{
         padding: 0;
     }
 
-    .nav li{
-        padding: 1.2rem 0;
+    .nav li span{
+        margin: auto;
     }
 }
 
