--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,52 @@ img{
 .app-container{
     height: 100vh;
     background-color: black;
+    position: relative;
+    overflow: hidden;
 }
+
+    .logo-open-page{
+        position: absolute;
+        width: 30vw;
+        top: -50%;
+        z-index: 10;
+        animation: logo-open-page 1s linear;
+    }
+
+        .logo-open-page img{
+            width: 100%;
+            filter: drop-shadow(0 10px 10px black);
+        }
+
+    @keyframes logo-open-page {
+        0% {
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(100%);
+            filter: opacity(1);
+        }
+
+        80% {
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(120%);
+            filter: opacity(1);
+        }
+
+        99%{
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(300%);
+            filter: opacity(0);
+        }
+
+        100%{
+            top: -50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(100%);
+            filter: opacity(0);
+        }
+    }
 
     .main{
         overflow: hidden;
@@ -262,6 +307,7 @@ img{
                     .component .cards-container{
                         gap: 1rem;
                         width: 100%;
+                        overflow: auto;
                     }
 
                         .cards-container .card{
@@ -269,6 +315,7 @@ img{
                             width: calc(100% / 6);
                             cursor: pointer;
                             text-align: center;
+                            min-width: 120px;
                         }
 
                             .card.rounded .img-container{
@@ -448,19 +495,25 @@ img{
 /* Media Queries */
 
 @media screen and (max-width: 1100px) {
-    .cards-container{
-        flex-wrap: wrap;
-    }
     
     .cards-container .card{
-        width: calc((100% / 4) - 1rem);
+        min-width: calc((100% / 4) - 1rem);
     }
     
 }
 
 @media screen and (max-width: 700px) {
+
+    .logo-open-page{
+        width: 50vw;
+    }
+
     .cards-container .card{
-        width: calc((100% / 2) - 1rem);
+        min-width: calc((100% / 2) - 1rem);
+    }
+
+    .timing{
+        font-size: 0.8rem;
     }
 }
 
@@ -505,6 +558,32 @@ img{
     }
 }
 
-@media screen and (max-width: 500px) {
-    
+@media screen and (max-width: 550px) {
+    .song-name{
+        display: none;
+    }
+
+    .player-options{
+        flex-basis: unset;
+    }
+
+    .volume-bar{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .song-icons{
+        display: none;
+    }
+
+    .player-options-controls .fa-list-ul, .player-options-controls .fa-display {
+        display: none;
+    }
+}
+
+@media screen and (max-height: 300px) {
+    .upgrade-bar{
+        display: none;
+    }
 }
