--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,25 @@ img{
                 display: block;
             }
 
+            /* scrollbar */
+            
+        /* width */
+        ::-webkit-scrollbar {
+            width: 5px;
+          }
+          
+          /* Track */
+          ::-webkit-scrollbar-track {
+            background: var(--black);
+          }
+          
+          /* Handle */
+          ::-webkit-scrollbar-thumb {
+            background: grey;
+            border-radius: 1rem;
+          }
+        
+
 /* Media Queries */
 
 @media screen and (max-width: 1100px) {
